# rocketmq-clients

./: .asf.yaml  .codecov.yml  .codespellignore  .gitignore  .gitlab-ci.yml  .gitmodules  .licenserc.json  .licenserc.yaml  NOTICE  README-CN.md  README.md  checkstyle.xml  pom.xml  spotbugs-suppressions.xml
cpp/: .bazelrc  .gitignore  CMakeLists.txt  README.md  WORKSPACE
cpp/api/rocketmq/: ErrorCode.h  Tracing.h
cpp/bazel/: rocketmq_deps.bzl
cpp/docs/: bugfix-correctness-threadsafety-memory.md  gtest.md  test_coverage.md
cpp/examples/: BUILD.bazel  CMakeLists.txt  ExampleAsyncProducer.cpp  ExampleFifoProducer.cpp  ExampleLiteProducer.cpp  ExampleLitePushConsumer.cpp  ExampleProducer.cpp  ExampleProducerWithAsync.cpp  ExampleProducerWithFifoMessage.cpp  ExampleProducerWithPriorityMessage.cpp  ExampleProducerWithTimedMessage.cpp  ExampleProducerWithTransactionalMessage.cpp  ExamplePushConsumer.cpp  ExampleSimpleConsumer.cpp  Makefile  SqlConsumer.cpp  SqlProducer.cpp
cpp/include/: BUILD.bazel
cpp/include/rocketmq/: Configuration.h  ErrorCode.h  FifoProducer.h  LitePushConsumer.h  Message.h  OffsetOption.h  Producer.h  PushConsumer.h  RecallReceipt.h  SendCallback.h  SendReceipt.h  SimpleConsumer.h  Transaction.h
cpp/proto/: CMakeLists.txt
cpp/source/: CMakeLists.txt  exports.map
cpp/source/admin/: BUILD.bazel  CMakeLists.txt
cpp/source/admin/tests/: AdminServerTest.cpp  BUILD.bazel  CMakeLists.txt
cpp/source/base/: BUILD.bazel  CMakeLists.txt  Configuration.cpp  CredentialsProvider.cpp  Message.cpp  MessageExt.cpp  MixAll.cpp  Protocol.cpp  ThreadPoolImpl.cpp  UniqueIdGenerator.cpp  UtilAll.cpp
cpp/source/base/include/: FmtEnumFormatter.h  InvocationContext.h  MixAll.h  Protocol.h  UniqueIdGenerator.h  thread_annotations_compat.h
cpp/source/base/mocks/: BUILD.bazel
cpp/source/base/tests/: AssignmentTest.cpp  BUILD.bazel  CMakeLists.txt  ConfigurationTest.cpp  MessageBuilderTest.cpp  MessageQueueTest.cpp
cpp/source/client/: BUILD.bazel  CMakeLists.txt  ClientManagerImpl.cpp  LogInterceptor.cpp  ReceiveMessageStreamReader.cpp  RpcClientImpl.cpp  SessionImpl.cpp  Signature.cpp  TelemetryBidiReactor.cpp  TopicAssignmentInfo.cpp
cpp/source/client/include/: Client.h  ClientConfig.h  RpcClient.h  (+11 more)
cpp/source/concurrent/: BUILD.bazel  CMakeLists.txt  CountdownLatch.cpp
cpp/source/log/: BUILD.bazel  CMakeLists.txt  LoggerImpl.cpp
cpp/source/remoting/: BUILD.bazel
cpp/source/rocketmq/: AsyncReceiveMessageCallback.cpp  BUILD.bazel  CMakeLists.txt  ClientImpl.cpp  ConsumeMessageServiceImpl.cpp  ConsumeTask.cpp  FifoContext.cpp  FifoProducer.cpp  FifoProducerImpl.cpp  FifoProducerPartition.cpp  LitePushConsumer.cpp  LitePushConsumerImpl.cpp  LiteSubscriptionManager.cpp  NamingScheme.cpp  ProcessQueueImpl.cpp  Producer.cpp  ProducerImpl.cpp  PushConsumer.cpp  PushConsumerImpl.cpp  SendContext.cpp  SimpleConsumer.cpp  SimpleConsumerImpl.cpp  StaticNameServerResolver.cpp  TopicPublishInfo.cpp  TransactionImpl.cpp  rocketmq.lds
cpp/source/scheduler/: BUILD.bazel  CMakeLists.txt  SchedulerImpl.cpp
cpp/source/stats/: BUILD.bazel  CMakeLists.txt  MetricBidiReactor.cpp  OpencensusExporter.cpp  PublishStats.cpp  StdoutHandler.cpp  Tag.cpp
cpp/source/trace/: BUILD.bazel  CMakeLists.txt  TracingUtility.cpp
cpp/tools/: coverage.sh  fix_copyright.py  format.sh  gen_compile_commands.sh  package.sh  trouble_shooting.sh  use_clang.sh
python/: NOTICE  README-CN.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py
python/client/: __init__.py  rpcClient.py  rpc_client.py
python/client/message/: MessageIdCodec.py  message_id_codec.py
python/example/: async_producer_example.py  async_simple_consumer_example.py  background_simple_consumer_example.py  delay_producer_example.py  fifo_producer_example.py  lite_producer_example.py  lite_push_consumer_example.py  normal_producer_example.py  priority_producer_example.py  push_consumer_example.py  simple_consumer_example.py  transaction_producer_example.py
python/examples/: simple_consumer_example.py
python/protocol/: __init__.py  admin_pb2.py  admin_pb2_grpc.py  definition_pb2.py  definition_pb2_grpc.py  service_pb2.py  service_pb2_grpc.py
python/rocketmq/: __init__.py  client.py  client_config.py  client_id_encoder.py  client_manager.py  consumer.py  definition.py  exponential_backoff_retry_policy.py  filter_expression.py  foo.py  log.py  message.py  message_id.py  message_id_codec.py  message_queue.py  producer.py  publish_settings.py  publishing_message.py  rpc_client.py  send_receipt.py  session.py  session_credentials.py  settings.py  signature.py  simple_consumer.py  simple_subscription_settings.py  state.py  status_checker.py  topic_route_data.py  utils.py
python/rocketmq/grpc_protocol/: __init__.py  admin_pb2.py  admin_pb2_grpc.py  definition_pb2.py  definition_pb2_grpc.py  service_pb2.py  service_pb2_grpc.py
python/rocketmq/protocol/: admin_pb2.py  admin_pb2.pyi  admin_pb2_grpc.py  definition_pb2.py  definition_pb2.pyi  definition_pb2_grpc.py  service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
python/rocketmq_client/: foo.py  rpc_client.py
python/rocketmq_client/protocol/: admin_pb2.py  definition_pb2.py  service_pb2.py  service_pb2_grpc.py
python/tests/: test_foo.py
rust/: .gitignore  Cargo.toml  README.md  build.rs
rust/.cargo/: Cargo.lock.min  config.toml
rust/examples/: delay_producer.rs  fifo_producer.rs  lite_producer.rs  lite_push_consumer.rs  priority_producer.rs  producer.rs  push_consumer.rs  recall_producer.rs  simple_consumer.rs  transaction_producer.rs
rust/src/: client.rs  command.rs  conf.rs  consumer.rs  consumer_selector.rs  error.rs  lib.rs  lite_push_consumer.rs  lite_subscription_manager.rs  log.rs  model.rs  models.rs  producer.rs  push_consumer.rs  selector.rs  session.rs  simple_consumer.rs  util.rs
rust/src/model/: common.rs  message.rs  message_id.rs  mod.rs  offset_option.rs  transaction.rs
rust/src/models/: message.rs  message_id.rs  message_view.rs  mod.rs
rust/src/pb/: README.md  apache.rocketmq.v2.rs
rust/tests/: lite_integration_test.rs
(+2315 files in other folders)
